--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:appComponentFactory="android.support.v4.app.CoreComponentFactory"
         android:theme="@style/AppTheme"
+        tools:replace="android:appComponentFactory"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity android:name="com.slack.exercise.ui.usersearch.UserSearchActivity">
             <intent-filter>
