feature: Copy data from the standard blacklist.txt file in the APK onto the internal storage of the device. Also cache the data of blacklist into memory so that its faster to check before deciding to make an API call.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    // others
+    // to be able to use reflection on the classes
+    implementation "org.jetbrains.kotlin:kotlin-reflect:${versions.kotlin}"
 }
