feature: handle edge cases which might lead to wrong queries being cached in the storage

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <service android:name=".BlackListCopyService" />
+        <service android:name=".services.BlackListCopyService" />
     </application>
 
 </manifest>
